testsuite/resolution/compile-fail/missing-method-body.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// Only interfaces are allowed to have body-less methods.
class Test {
  // CHECK-L: missing-method-body.verona:${LINE:+1}:3: error: Method 'foo' in class 'Test' must have a body
  foo();
}
